k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    name: capstone
    circleci.com/component-name: capstone-namespace
